# low_prog

./: CMakeLists.txt  CMakePresets.json  lab1.asm  lab2-task1.asm  lab2-task2.asm  lab2-task3.asm  lab2-task4.asm  lab3-task1.asm  lab3-task2.asm  low_prog.cpp  low_prog.h  xorshift128_1.cpp  xorshift128_2.cpp
